@@ -1,10 +1,15 @@
 Version 2.1.172
+    Added 'mcmmo.broadcast.levelup' permission node, if a player lacks this node they will not have their level up milestones broadcast to chat
     Updated german locale (thanks TheBusyBiscuit)
     Changed Fists to not be capitalized (en_US) when lowering/readying berserk
     SkillActivationPerkEvent can now be called in async threads (thanks electronicboy)
     You can now disable the XP orbs from being dropped when Knock On Wood triggers during Tree Feller
     Added 'Skills.Woodcutting.TreeFeller.Knock_On_Wood.Add_XP_Orbs_To_Drops' to advanced.yml
     Removed a few never implemented settings from Skills.Woodcutting.TreeFeller in advanced.yml
+
+    NOTES:
+    The new 'mcmmo.broadcast.levelup' node is a default node included under the 'mcmmo.defaults' node umbrella, you shouldn't have to give this to your players unless they don't have access to 'mcmmo.defaults'
+    If you don't have a permission plugin you don't need to worry, players will have this node by default in that case
 
 Version 2.1.171
     Fixed a bug where arrows shot by infinite bow enchant would duplicate
